Added hasAccess middleware
