# routes/task.js
@@ -1,13 +1,11 @@
-const express = require("express");
-const routes = express.Router();
-const taskController = require("../controllers/task");
+const express = require('express')
+const routes = express.Router()
+const taskController = require('../controllers/task')
+const { hasAccess } = require('../middleware/hasAccess')
 
-routes.get("/:id", taskController.retrieveTask);
+routes.get('/:taskId', hasAccess, taskController.retrieveTask)
+routes.post('/project/:projectId/tasks', hasAccess)
+routes.put('/:taskId', hasAccess, taskController.updateTask)
+routes.delete('/tasks/:taskId', hasAccess)
 
-routes.post("/project/:id/tasks");
-
-routes.put("/:id", taskController.updateTask);
-
-routes.delete("/projects/:id/tasks/:id");
-
-module.exports = routes;
+module.exports = routes
